[workspace]
members = ["meru-interface"]

[package]
name = "meru"
version = "0.1.0"
edition = "2021"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
license = "MIT"

description = "Multi game console Emulator written in Rust"
repository = "https://github.com/tanakh/meru"
readme = "README.md"
categories = ["emulators"]
keywords = ["emulators"]

[dependencies]
meru-interface = { path = "meru-interface", version = "0.2.0" }
tgbr = { path = "tgbr", version = "0.3.0" }
tgba = { path = "tgba", version = "0.1.0" }
super-sabicom = { path = "../super-sabicom", version = "0.1.0" }

anyhow = "=1.0.59"
bevy = { version = "0.8.0", features = ["serialize"] }
bevy_easings = "0.8.1"
bevy_egui = "0.15.1"
bevy_tiled_camera = "0.4.0"
chrono = "0.4.19"
compress-tools = "0.13.0"
directories = "4.0.1"
enum-iterator = "1.1.2"
image = { version = "0.24.3", default-features = false, features = ["ico"] }
log = "0.4.17"
rfd = "0.10.0"
rodio = "0.15.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "1.0.32"
tempfile = "3.3.0"
winit = "0.26"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
branch = "master"
dependencies = ["libarchive"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
