[workspace]
members = ["meru-interface"]
exclude = ["super-sabicom"]

[package]
name = "meru"
version = "0.2.0"
edition = "2021"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
license = "MIT"

description = "Multi game console Emulator written in Rust"
repository = "https://github.com/tanakh/meru"
readme = "README.md"
categories = ["emulators"]
keywords = ["emulators"]

[dependencies]
meru-interface = { path = "meru-interface", version = "0.2.0" }
sabicom = { path = "sabicom", version = "0.1.0" }
super-sabicom = { path = "super-sabicom", version = "0.1.0" }
tgbr = { path = "tgbr", version = "0.3.0" }
tgba = { path = "tgba", version = "0.2.0" }

anyhow = "=1.0.59"
async-channel = "1.7.1"
bincode = "1.3.3"
bevy = { version = "0.8.0", features = ["serialize"] }
bevy_easings = "0.8.1"
bevy_egui = "0.15.1"
bevy_tiled_camera = "0.4.0"
cfg-if = "1.0.0"
chrono = "0.4.22"
directories = "4.0.1"
either = "1.8.0"
enum-iterator = "1.2.0"
image = { version = "0.24.3", default-features = false, features = ["ico"] }
log = "0.4.17"
rfd = "0.10.0"
rodio = { version = "0.15.0", default-features = false }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "1.0.32"
tempfile = "3.3.0"
winit = "0.26"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
compress-tools = "0.13.0"
futures = { version = "0.3.23", features = ["thread-pool"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = "0.4.22"
indexed_db_futures = "0.2.3"
js-sys = "0.3.59"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
branch = "master"
dependencies = ["libarchive"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[patch.crates-io]
meru-interface = { path = "meru-interface" }
