[package]
name = "meru-interface"
version = "0.1.0"
edition = "2021"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
license = "MIT"

description = "Core interface for MERU multi emulator"
repository = "https://github.com/tanakh/meru"
readme = "README.md"
categories = ["emulators"]
keywords = ["emulators"]

[dependencies]
anyhow = "1.0.58"
bevy_input = { version = "0.7", features = ["serialize"] }
egui = "0.18"
serde = "1.0.137"
