[package]
name = "meru-interface"
version = "0.2.0"
edition = "2021"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
license = "MIT"

description = "Core interface for MERU multi emulator"
repository = "https://github.com/tanakh/meru"
readme = "README.md"
categories = ["emulators"]
keywords = ["emulators"]

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
