[package]
name = "meru-interface"
version = "0.3.0"
edition = "2021"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
license = "MIT"

description = "Core interface for MERU multi emulator"
repository = "https://github.com/tanakh/meru"
readme = "README.md"
categories = ["emulators"]
keywords = ["emulators"]

[dependencies]
schemars = "0.8.10"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.32"

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.13.0"
base64-serde = "0.6.1"
